Bug 317486 Some plug-ins may eat WM_SETFOCUS / WM_KILLFOCUS patch by Masatoshi Kimura (emk) <VYV03354@nifty.ne.jp> r=ere, sr=roc